--- a/OrderApp/OrderApp/appsettings.json
+++ b/OrderApp/OrderApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db-mssql16;Database=2019SBD;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
